// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search.Card should render a snapshot 1`] = `
.c5 {
  width: 100%;
  border-style: none;
  color: #24292f;
  background-color: #ffffff;
}

.c5::-webkit-input-placeholder {
  color: #6e7781;
}

.c5::-moz-placeholder {
  color: #6e7781;
}

.c5:-ms-input-placeholder {
  color: #6e7781;
}

.c5::placeholder {
  color: #6e7781;
}

.c5:disabled {
  color: #57606a;
  background-color: #f6f8fa;
}

.c5:focus {
  outline: none;
}

.c2 {
  position: relative;
}

.c2 {
  background-color: #ffffff !important;
  box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  padding: 0 8px;
  border-radius: 4px;
  width: 100%;
  height: 48px;
}

.c2:disabled {
  color: #57606a !important;
  background-color: #f6f8fa !important;
}

.c2 > .c4 {
  padding: 0 8px 0 8px;
  color: inherit;
  background-color: inherit;
  line-height: 40px;
  font-weight: 500;
}

.c3 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 8px;
}

.c3 {
  border-style: none;
  border-radius: 10px;
  height: 40px;
}

.c3 {
  color: #24292f;
  background-color: inherit;
}

.c3:disabled {
  cursor: default;
}

.c3:disabled > svg {
  cursor: default;
  color: #57606a;
}

.c3 > svg {
  width: 16px;
  height: 16px;
}

.c3:enabled > svg:hover {
  color: #0969da;
}

.c0 {
  display: grid;
  gap: 0;
}

.c0:focus-within > .search--input > div {
  border-radius: 0;
  border-bottom: 1px solid #d0d7de;
  box-shadow: none !important;
}

.c0:focus-within > .search--dropdown > ul {
  border-radius: 0 0 4px 4px;
  box-shadow: 0 3px 6px -6px rgba(140,149,159,0.15) !important;
}

.c1 button {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.c1 > div {
  border-radius: 0 0 4px 4px;
}

@media (min-width:544px) {
  .c0 {
    gap: 16px 0;
  }

  .c0 .search--input {
    border-radius: 4px;
  }
}

@media (min-width:544px) {
  .c0:focus-within > .search--input > div {
    border-radius: 4px;
    border-bottom: none;
    box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
  }
}

@media (min-width:544px) {
  .c0:focus-within > .search--dropdown > ul {
    border-radius: 4px;
    box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
  }
}

@media (min-width:544px) {
  .c1 > div {
    border-radius: 4px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 search--input"
  >
    <div
      class="c2"
    >
      <button
        class="c3"
      >
        <svg
          aria-label="input-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          />
          <line
            x1="21"
            x2="16.65"
            y1="21"
            y2="16.65"
          />
        </svg>
      </button>
      <input
        aria-disabled="false"
        aria-label="Search autocomplete"
        aria-readonly="false"
        autocomplete="off"
        class="c4 c5 input--empty"
        placeholder="Search the world..."
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Search.Card should render loading dropdown on focus and typing 1`] = `
.c7 {
  width: 100%;
}

.c9 {
  -webkit-animation: bQashm 1.5s ease-in-out infinite;
  animation: bQashm 1.5s ease-in-out infinite;
  background: #6e7781;
  color: transparent;
  cursor: progress;
  display: block;
  width: 100%;
  height: 100%;
}

.c4 {
  width: 100%;
  border-style: none;
  color: #24292f;
  background-color: #ffffff;
}

.c4::-webkit-input-placeholder {
  color: #6e7781;
}

.c4::-moz-placeholder {
  color: #6e7781;
}

.c4:-ms-input-placeholder {
  color: #6e7781;
}

.c4::placeholder {
  color: #6e7781;
}

.c4:disabled {
  color: #57606a;
  background-color: #f6f8fa;
}

.c4:focus {
  outline: none;
}

.c2 {
  position: relative;
}

.c2 {
  background-color: #ffffff !important;
  box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  padding: 0 8px;
  border-radius: 4px;
  width: 100%;
  height: 48px;
}

.c2:disabled {
  color: #57606a !important;
  background-color: #f6f8fa !important;
}

.c2 > .c3 {
  padding: 0 8px 0 8px;
  color: inherit;
  background-color: inherit;
  line-height: 40px;
  font-weight: 500;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
}

.c5 {
  border-style: none;
  border-radius: 10px;
  height: 40px;
}

.c5 {
  color: #24292f;
  background-color: inherit;
}

.c5:disabled {
  cursor: default;
}

.c5:disabled > svg {
  cursor: default;
  color: #57606a;
}

.c5 > svg {
  width: 16px;
  height: 16px;
}

.c5:enabled > svg:hover {
  color: #0969da;
}

.c6 > ul {
  display: block;
  padding: 0;
  margin: 0;
  width: 100%;
  z-index: 1000;
  top: 100%;
  border-radius: 6px;
  overflow: hidden;
}

.c6 > ul {
  background-color: #ffffff !important;
  box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
}

.c6 > ul * {
  cursor: default;
}

.c6 > ul:before {
  content: attr(data-title);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  border-bottom: 1px solid #d0d7de;
  font-size: 12px;
  color: #24292f;
  text-transform: uppercase;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
}

.c6 > ul > li:not(:last-child) {
  border-color: var(--border);
  border-bottom: 1px solid rgba(27,31,36,0.15);
}

.c0 {
  display: grid;
  gap: 0;
}

.c0:focus-within > .search--input > div {
  border-radius: 0;
  border-bottom: 1px solid #d0d7de;
  box-shadow: none !important;
}

.c0:focus-within > .search--dropdown > ul {
  border-radius: 0 0 4px 4px;
  box-shadow: 0 3px 6px -6px rgba(140,149,159,0.15) !important;
}

.c1 button {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.c1 > div {
  border-radius: 0 0 4px 4px;
}

.c8 {
  height: 48px;
  padding: 0 15px;
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: max-content;
  grid-gap: 15px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 16px;
}

.c10 {
  width: 24px;
  height: 24px;
}

.c11 {
  height: 24px;
  width: 100%;
}

@media (min-width:544px) {
  .c0 {
    gap: 16px 0;
  }

  .c0 .search--input {
    border-radius: 4px;
  }
}

@media (min-width:544px) {
  .c0:focus-within > .search--input > div {
    border-radius: 4px;
    border-bottom: none;
    box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
  }
}

@media (min-width:544px) {
  .c0:focus-within > .search--dropdown > ul {
    border-radius: 4px;
    box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
  }
}

@media (min-width:544px) {
  .c1 > div {
    border-radius: 4px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 search--input"
  >
    <div
      class="c2"
    >
      <input
        aria-disabled="false"
        aria-label="Search autocomplete"
        aria-readonly="false"
        autocomplete="off"
        class="c3 c4 input--focus"
        placeholder="Search the world..."
        type="text"
        value="H"
      />
      <button
        class="c5"
      >
        <svg
          aria-label="input-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c6 search--dropdown"
  >
    <ul
      aria-label="Search Results"
      class="c7"
      data-title="Search Results"
      role="listbox"
    >
      <li
        role="option"
        tabindex="-1"
      >
        <div
          class="c8 loading-item"
        >
          <span
            class="c9 c10"
          />
          <span>
            <span
              class="c9 c11"
            >
              loading...
            </span>
          </span>
        </div>
      </li>
      <li
        role="option"
        tabindex="-1"
      >
        <div
          class="c8 loading-item"
        >
          <span
            class="c9 c10"
          />
          <span>
            <span
              class="c9 c11"
            >
              loading...
            </span>
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Search.Card should render search dropdown on focus and typing 1`] = `
.c7 {
  width: 100%;
}

.c4 {
  width: 100%;
  border-style: none;
  color: #24292f;
  background-color: #ffffff;
}

.c4::-webkit-input-placeholder {
  color: #6e7781;
}

.c4::-moz-placeholder {
  color: #6e7781;
}

.c4:-ms-input-placeholder {
  color: #6e7781;
}

.c4::placeholder {
  color: #6e7781;
}

.c4:disabled {
  color: #57606a;
  background-color: #f6f8fa;
}

.c4:focus {
  outline: none;
}

.c2 {
  position: relative;
}

.c2 {
  background-color: #ffffff !important;
  box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  padding: 0 8px;
  border-radius: 4px;
  width: 100%;
  height: 48px;
}

.c2:disabled {
  color: #57606a !important;
  background-color: #f6f8fa !important;
}

.c2 > .c3 {
  padding: 0 8px 0 8px;
  color: inherit;
  background-color: inherit;
  line-height: 40px;
  font-weight: 500;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
}

.c5 {
  border-style: none;
  border-radius: 10px;
  height: 40px;
}

.c5 {
  color: #24292f;
  background-color: inherit;
}

.c5:disabled {
  cursor: default;
}

.c5:disabled > svg {
  cursor: default;
  color: #57606a;
}

.c5 > svg {
  width: 16px;
  height: 16px;
}

.c5:enabled > svg:hover {
  color: #0969da;
}

.c6 > ul {
  display: block;
  padding: 0;
  margin: 0;
  width: 100%;
  z-index: 1000;
  top: 100%;
  border-radius: 6px;
  overflow: hidden;
}

.c6 > ul {
  background-color: #ffffff !important;
  box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
}

.c6 > ul * {
  cursor: pointer;
}

.c6 > ul:before {
  content: attr(data-title);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  border-bottom: 1px solid #d0d7de;
  font-size: 12px;
  color: #24292f;
  text-transform: uppercase;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
}

.c6 > ul > li:not(:last-child) {
  border-color: var(--border);
  border-bottom: 1px solid rgba(27,31,36,0.15);
}

.c0 {
  display: grid;
  gap: 0;
}

.c0:focus-within > .search--input > div {
  border-radius: 0;
  border-bottom: 1px solid #d0d7de;
  box-shadow: none !important;
}

.c0:focus-within > .search--dropdown > ul {
  border-radius: 0 0 4px 4px;
  box-shadow: 0 3px 6px -6px rgba(140,149,159,0.15) !important;
}

.c1 button {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.c1 > div {
  border-radius: 0 0 4px 4px;
}

.c8 {
  height: 48px;
  padding: 0 15px;
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: max-content;
  grid-gap: 15px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 16px;
}

.c8 > svg {
  font-size: 24px;
  width: 20px;
  height: 20px;
}

.c8:hover {
  background-color: rgba(234,238,242,0.5);
}

.c9 {
  font-size: 14px;
  display: inline-block;
  margin-right: 5px;
  pointer-events: none;
}

.c10 {
  font-size: 12px;
  color: #6e7781;
  display: inline;
  pointer-events: none;
}

@media (min-width:544px) {
  .c0 {
    gap: 16px 0;
  }

  .c0 .search--input {
    border-radius: 4px;
  }
}

@media (min-width:544px) {
  .c0:focus-within > .search--input > div {
    border-radius: 4px;
    border-bottom: none;
    box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
  }
}

@media (min-width:544px) {
  .c0:focus-within > .search--dropdown > ul {
    border-radius: 4px;
    box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
  }
}

@media (min-width:544px) {
  .c1 > div {
    border-radius: 4px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 search--input"
  >
    <div
      class="c2"
    >
      <input
        aria-disabled="false"
        aria-label="Search autocomplete"
        aria-readonly="false"
        autocomplete="off"
        class="c3 c4 input--focus"
        placeholder="Search the world..."
        type="text"
        value="halifa"
      />
      <button
        class="c5"
      >
        <svg
          aria-label="input-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c6 search--dropdown"
  >
    <ul
      aria-label="Search Results"
      class="c7"
      data-title="Search Results"
      role="listbox"
    >
      <li
        role="option"
        tabindex="-1"
      >
        <div
          class="c8"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
            />
            <circle
              cx="12"
              cy="10"
              r="3"
            />
          </svg>
          <span>
            <span
              class="c9"
            >
              Halifax
            </span>
            <span
              class="c10"
            >
              United Kingdom
            </span>
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
